multiple file upload

--- a/upload.html
+++ b/upload.html
@@ -26,8 +26,8 @@
             <progress id="summed_progress" value="0" max="100"></progress>
             <- Uploading + Uploaded Progress Bar
         </p>
-        <script src="jquery-1.9.1.min.js"></script>
-        <script src="upload.js"></script>
+        <script src="js/jquery-1.9.1.min.js"></script>
+        <script src="js/upload.js"></script>
         <script>
                 var s3upload = null;
 
