--- a/raw_upload.html
+++ b/raw_upload.html
@@ -7,7 +7,7 @@
     <body>
         <p><input type="file" id="file"><button onclick="upload()">Upload</button></p>
         <progress id="progress" value="0" max="100"></progress>
-        <script src="jquery-1.9.1.min.js"></script>
+        <script src="js/jquery-1.9.1.min.js"></script>
         <script>
             var sendBackData;
             var partSize = 5 * 1024 * 1024; // constant
